// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`test SQLite3 conversation CRUD operations should insert 3 replies 1`] = `
[
  {
    "config": "default",
    "content": "Bonjour",
    "conv_id": "c2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
  {
    "config": "default",
    "content": "Je suis Pierre !",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
  {
    "config": "default",
    "content": "Qui es-tu ?",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
]
`;

exports[`test SQLite3 conversation CRUD operations should get 2 conversations 1`] = `
[
  {
    "config": "default",
    "content": "Qui es-tu ?",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
  {
    "config": "default",
    "content": "Je suis Pierre !",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
]
`;

exports[`test SQLite3 conversation CRUD operations should get 2 conversations 2`] = `
[
  {
    "config": "default",
    "content": "Bonjour",
    "conv_id": "c2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;

exports[`test SQLite3 conversation CRUD operations should have score 1`] = `
[
  {
    "config": "default",
    "content": "Qui es-tu ?",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai_comment",
          "score": 3,
        },
        "customer": {
          "comment": "customer_comment",
          "score": 1,
        },
        "organization": {
          "comment": "organization_comment",
          "score": 2,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
  {
    "config": "default",
    "content": "Je suis Pierre !",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai_comment",
          "score": 3,
        },
        "customer": {
          "comment": "customer_comment",
          "score": 1,
        },
        "organization": {
          "comment": "organization_comment",
          "score": 2,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
]
`;

exports[`test SQLite3 conversation CRUD operations should have score 2`] = `
[
  {
    "config": "default",
    "content": "Bonjour",
    "conv_id": "c2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai_comment",
          "score": 3,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;

exports[`test SQLite3 conversation CRUD operations should save topic 1`] = `
[
  {
    "config": "default",
    "content": "Qui es-tu ?",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai_comment",
          "score": 3,
        },
        "customer": {
          "comment": "customer_comment",
          "score": 1,
        },
        "organization": {
          "comment": "organization_comment",
          "score": 2,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": "multiple",
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
  {
    "config": "default",
    "content": "Je suis Pierre !",
    "conv_id": "c1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai_comment",
          "score": 3,
        },
        "customer": {
          "comment": "customer_comment",
          "score": 1,
        },
        "organization": {
          "comment": "organization_comment",
          "score": 2,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": "multiple",
      "user": null,
    },
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
]
`;

exports[`test SQLite3 conversation CRUD operations should retrieve all conversations 1`] = `
[
  {
    "config": "default",
    "content": "Bonjour",
    "conv_id": "c2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai_comment",
          "score": 3,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
      "user": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;
